@@ -2864,6 +2864,7 @@ void BaseGui::showPreferencesDialog() {
 	pl->setAutoGetInfo(playlist->autoGetInfo());
 	pl->setSavePlaylistOnExit(playlist->savePlaylistOnExit());
 	pl->setPlayFilesFromStart(playlist->playFilesFromStart());
+	pl->setIgnorePlayerErrors(playlist->ignorePlayerErrors());
 
 	pref_dialog->show();
 }
@@ -2955,6 +2956,7 @@ void BaseGui::applyNewPreferences() {
 	playlist->setAutoGetInfo(pl->autoGetInfo());
 	playlist->setSavePlaylistOnExit(pl->savePlaylistOnExit());
 	playlist->setPlayFilesFromStart(pl->playFilesFromStart());
+	playlist->setIgnorePlayerErrors(pl->ignorePlayerErrors());
 
 
 	if (need_update_language) {
