@@ -78,6 +78,7 @@ Playlist::Playlist( Core *c, QWidget * parent, Qt::WindowFlags f)
 	play_files_from_start = true;
 
 	automatically_play_next = true;
+	ignore_player_errors = false;
 
 	row_spacing = -1; // Default height
 
@@ -92,6 +93,8 @@ Playlist::Playlist( Core *c, QWidget * parent, Qt::WindowFlags f)
 	createToolbar();
 
 	connect( core, SIGNAL(mediaFinished()), this, SLOT(playNext()), Qt::QueuedConnection );
+	connect( core, SIGNAL(mplayerFailed(QProcess::ProcessError)), this, SLOT(playerFailed(QProcess::ProcessError)) );
+	connect( core, SIGNAL(mplayerFinishedWithError(int)), this, SLOT(playerFinishedWithError(int)) );
 	connect( core, SIGNAL(mediaLoaded()), this, SLOT(getMediaInfo()) );
 
 	QVBoxLayout *layout = new QVBoxLayout;
@@ -1377,6 +1380,21 @@ void Playlist::closeEvent( QCloseEvent * e )  {
 	e->accept();
 }
 
+void Playlist::playerFailed(QProcess::ProcessError e) {
+	qDebug("Playlist::playerFailed");
+	if (ignore_player_errors) {
+		if (e != QProcess::FailedToStart) {
+			playNext();
+		}
+	}
+}
+
+void Playlist::playerFinishedWithError(int e) {
+	qDebug("Playlist::playerFinishedWithError: %d", e);
+	if (ignore_player_errors) {
+		playNext();
+	}
+}
 
 void Playlist::maybeSaveSettings() {
 	qDebug("Playlist::maybeSaveSettings");
@@ -1402,6 +1420,7 @@ void Playlist::saveSettings() {
 	set->setValue( "save_playlist_in_config", save_playlist_in_config );
 	set->setValue( "play_files_from_start", play_files_from_start );
 	set->setValue( "automatically_play_next", automatically_play_next );
+	set->setValue( "ignore_player_errors", ignore_player_errors );
 
 	set->setValue( "row_spacing", row_spacing );
 
@@ -1448,6 +1467,7 @@ void Playlist::loadSettings() {
 	save_playlist_in_config = set->value( "save_playlist_in_config", save_playlist_in_config ).toBool();
 	play_files_from_start = set->value( "play_files_from_start", play_files_from_start ).toBool();
 	automatically_play_next = set->value( "automatically_play_next", automatically_play_next ).toBool();
+	ignore_player_errors = set->value( "ignore_player_errors", ignore_player_errors ).toBool();
 
 	row_spacing = set->value( "row_spacing", row_spacing ).toInt();
 
